fixed font family

--- a/src/component/Body/Body.css
+++ b/src/component/Body/Body.css
@@ -12,7 +12,7 @@
     background: #FBC91B;
     border-radius: 12px;
     margin: 10px;
-    font-family: sans-serif;
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -26,7 +26,7 @@
     background: #F2F2F2;
     border-radius: 12px;
     margin: 10px;
-    font-family: sans-serif;
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -39,7 +39,7 @@
     top: 356px;
     background: #FFC700;
     border-radius: 12px;
-    font-family: sans-serif;
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
